--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "prom-client": "^14.2.0"
   },
   "name": "tokoijo-play",
   "version": "1.0.0",
   "description": "Tokopedia play clone",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
