--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
@@ -23,5 +24,8 @@
     "url": "https://github.com/khasyah-fr/tokoijo-play/issues"
   },
   "homepage": "https://github.com/khasyah-fr/tokoijo-play#readme",
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=20.4.0"
+  }
 }
